--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yang0328.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Sam Yang博客
+subtitle: 记录点滴,学以致用!
+author: Sam Yang
 simple_search: https://www.google.com/search
 description:
 
