add jira comment

--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,8 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
-twitter_tweet_button: true
+#twitter_user:
+#twitter_tweet_button: true
 
 # Google +1
 google_plus_one: false
@@ -91,8 +91,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: yang0328
-disqus_show_comment_count: true
+#disqus_short_name: yang0328
+#disqus_show_comment_count: false
 
 # Google Analytics
 google_analytics_tracking_id:
@@ -106,3 +106,6 @@ jiathis: false
 # duoshuo comments
 duoshuo_comments: false
 duoshuo_short_name: withtreasure
+
+#add weibo
+weibo_share: true
